[project]
name = "moltbot-ha"
version = "0.1.1"
description = "Home Assistant control CLI for Moltbot agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Valerio Fantozzi", email = "iamvaleriofantozzi@gmail.com" }
]
keywords = ["home-assistant", "smart-home", "cli", "moltbot", "agent", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer >= 0.9.0",
    "requests >= 2.31.0",
    "pydantic >= 2.0.0",
    "rich >= 13.0.0",
    "tomli >= 2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
    "pytest-cov >= 4.0.0",
    "responses >= 0.23.0",
    "black >= 23.0.0",
    "ruff >= 0.1.0",
]

[project.scripts]
moltbot-ha = "ha_ctl.cli:app"

[project.urls]
Homepage = "https://github.com/iamvaleriofantozzi/moltbot-ha"
Repository = "https://github.com/iamvaleriofantozzi/moltbot-ha"
Documentation = "https://github.com/iamvaleriofantozzi/moltbot-ha#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ha_ctl"]

[tool.hatch.build.targets.wheel.shared-data]
"src/ha_ctl/config.example.toml" = "ha_ctl/config.example.toml"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=ha_ctl",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
precision = 2
skip_empty = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.isort]
known-first-party = ["ha_ctl"]
